add bookmark caching
